syntax = "proto3";

package greet_service;

option go_package = "gen/go/todo";

service GreetService {
  rpc SayHello(NoParam) returns (HelloResponse);
}

message NoParam {}

message HelloResponse {
  uint64 id = 1;
}
